simpleaccounts-frontend/test-ingress.yaml
# Source: helm-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1-app-frontend

  labels:
    helm.sh/chart: helm-frontend-0.1.0
    app.kubernetes.io/name: helm-frontend
    app.kubernetes.io/instance: test1-app-frontend
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/clusterissuer: simpleaccounts-letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
      - "test3-app.app.simpleaccounts.io"
      secretName: wildcard-app-simplevat-com-tls
  rules:
    - host: "test3-app.app.simpleaccounts.io"
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: test1-app-frontend
                port:
                  number: 80
